menu bar readability fix + tidy up

--- a/scss/rumi.scss
+++ b/scss/rumi.scss
@@ -104,14 +104,13 @@ a {
       -moz-transition: background 0.3s ease-in-out;
       transition: background 0.3s ease-in-out;
       &:hover {
-        color: darken(white, 60%);
         outline: none;
-        background-color: rgba(255,255,255,0);
+        background-color: rgba(255,255,255,.75);
       }
       &:active,
       &:focus {
         outline: none;
-        background-color: rgba(255,255,255,0);
+        background-color: rgba(255,255,255,.75);
       }
 
       a {
@@ -139,20 +138,22 @@ a {
       padding-bottom: 10px;
 
       border-bottom: 1px solid fade-out(white, .7);
-      background: #dddddd;
+      background: #bababa;
       opacity: 0.94;
     }
     
-    .nav-link.active {
+    &.navbar-expand-lg .navbar-nav .dropdown-menu .dropdown-item.active,
+    a.nav-link.active {
       outline: none;
-      background-color: rgba(white, .3);
+      background-color: rgba(white, .8);
+      color: darken(white, 80%);
     }
 
 
     &.navbar-expand-lg .navbar-nav .dropdown-menu {
       top: 54px;
       transform: translateX(-19px);
-      background-color: #ddd;
+      background-color: #bababa;
       border-radius: 0px;
       border: none;
     }
